{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 36,
  "lineage": "59c89b89-c086-bad0-09d4-4cf41652fc9a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prime-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080336420602:internet-gateway/igw-01dd89feb18923f6b",
            "id": "igw-01dd89feb18923f6b",
            "owner_id": "080336420602",
            "tags": {
              "Name": "prime-igw"
            },
            "tags_all": {
              "Name": "prime-igw"
            },
            "vpc_id": "vpc-0d19dad6e4a0de937"
          },
          "dependencies": [
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prime-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080336420602:route-table/rtb-08e6b18ec7befa138",
            "id": "rtb-08e6b18ec7befa138",
            "owner_id": "080336420602",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prime-private-route-table"
            },
            "tags_all": {
              "Name": "prime-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d19dad6e4a0de937"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prime-pub-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080336420602:route-table/rtb-091bbed0c0a9e9829",
            "id": "rtb-091bbed0c0a9e9829",
            "owner_id": "080336420602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01dd89feb18923f6b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prime-pub-route_table"
            },
            "tags_all": {
              "Name": "prime-pub-route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d19dad6e4a0de937"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e90a31c69acfb8f",
            "route_table_id": "rtb-08e6b18ec7befa138",
            "subnet_id": "subnet-049d6066cc052d2d7"
          },
          "dependencies": [
            "aws_route_table.prime-private",
            "aws_subnet.prime-private1",
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002e142790e0a688d",
            "route_table_id": "rtb-08e6b18ec7befa138",
            "subnet_id": "subnet-0940cc0dfc9b3e383"
          },
          "dependencies": [
            "aws_route_table.prime-private",
            "aws_subnet.prime-private2",
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c5b186658085bab",
            "route_table_id": "rtb-091bbed0c0a9e9829",
            "subnet_id": "subnet-0067f1f4deb7b69ae"
          },
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_route_table.prime-pub-route-table",
            "aws_subnet.prime-pub1",
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0116a5a6d9c48a5df",
            "route_table_id": "rtb-091bbed0c0a9e9829",
            "subnet_id": "subnet-044c6dcdefb2899b3"
          },
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_route_table.prime-pub-route-table",
            "aws_subnet.prime-pub2",
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080336420602:subnet/subnet-049d6066cc052d2d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049d6066cc052d2d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "080336420602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-private1"
            },
            "tags_all": {
              "Name": "prime-private1"
            },
            "vpc_id": "vpc-0d19dad6e4a0de937"
          },
          "dependencies": [
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080336420602:subnet/subnet-0940cc0dfc9b3e383",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0940cc0dfc9b3e383",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "080336420602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-private2"
            },
            "tags_all": {
              "Name": "prime-private2"
            },
            "vpc_id": "vpc-0d19dad6e4a0de937"
          },
          "dependencies": [
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080336420602:subnet/subnet-0067f1f4deb7b69ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0067f1f4deb7b69ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "080336420602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-pub1"
            },
            "tags_all": {
              "Name": "prime-pub1"
            },
            "vpc_id": "vpc-0d19dad6e4a0de937"
          },
          "dependencies": [
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080336420602:subnet/subnet-044c6dcdefb2899b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044c6dcdefb2899b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "080336420602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-pub2"
            },
            "tags_all": {
              "Name": "prime-pub2"
            },
            "vpc_id": "vpc-0d19dad6e4a0de937"
          },
          "dependencies": [
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prime-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080336420602:vpc/vpc-0d19dad6e4a0de937",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c88398b643949c1e",
            "default_route_table_id": "rtb-0d6ffd91435ac60c9",
            "default_security_group_id": "sg-0397714c7294b7208",
            "dhcp_options_id": "dopt-0abe408d3b458f86b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d19dad6e4a0de937",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6ffd91435ac60c9",
            "owner_id": "080336420602",
            "tags": {
              "Name": "prime-vpc"
            },
            "tags_all": {
              "Name": "prime-vpc"
            }
          }
        }
      ]
    }
  ]
}